Update spark_configuration_EMR.md